==========
Change Log
==========

Version 2.0.7 - 
---------------------------
- Simplified string representation of Forward class, to avoid memory
  and performance errors while building ParseException messages.


Version 2.0.6 - 
---------------------------
- Fixed a bug in Each when multiple Optional elements are present.
  Thanks for reporting this, whereswalden on SO.

- Fixed another bug in Each, when Optional elements have results names
  or parse actions, reported by Max Rothman - thank you, Max!

- Added optional parseAll argument to runTests, whether tests should
  require the entire input string to be parsed or not (similar to 
  parseAll argument to parseString). Plus a little neaten-up of the
  output on Python 2 (no stray ()'s).

- Modified exception messages from MatchFirst and Or expressions. These
  were formerly misleading as they would only give the first or longest
  exception mismatch error message. Now the error message includes all
  the alternatives that were possible matches. Originally proposed by 
  a pyparsing user, but I've lost the email thread - finally figured out
  a fairly clean way to do this.

- Fixed a bug in Or, when a parse action on an alternative raises an 
  exception, other potentially matching alternatives were not always tried.
  Reported by TheVeryOmni on the pyparsing wiki, thanks!

- Fixed a bug to dump() introduced in 2.0.4, where list values were shown
  in duplicate.


Version 2.0.5 -
---------------------------
- (&$(@#&$(@!!!!  Some "print" statements snuck into pyparsing v2.0.4,
  breaking Python 3 compatibility! Fixed. Reported by jenshn, thanks!
  

Version 2.0.4 -
---------------------------
- Added ParserElement.addCondition, to simplify adding parse actions 
  that act primarily as filters. If the given condition evaluates False,
  pyparsing will raise a ParseException. The condition should be a method
  with the same method signature as a parse action, but should return a